<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:textAlignment="center"
    tools:context="com.bodymass.howismassbody.FormCalMassFragment">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="31dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/tituleframe"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:text="@string/tituleform"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="346dp"
        android:layout_height="370dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="57dp"

            android:layout_marginLeft="12dp"
            android:background="#FF5722"
            android:hint="@string/plaseholderinpuit1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:theme="@style/Theme.HowIsMassBody.OPTION">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:inputType="none"
                android:text=""
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:theme="@style/Theme.HowIsMassBody.item"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="57dp"

            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:background="#FF5722"
            android:hint="@string/plaseholderinpuit2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:theme="@style/Theme.HowIsMassBody.OPTION">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:theme="@style/Theme.HowIsMassBody.item"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="57dp"

            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:background="#FF5722"
            android:hint="@string/plaseholderinpuit3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:theme="@style/Theme.HowIsMassBody.OPTION">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:inputType="none"
                android:text=""
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:theme="@style/Theme.HowIsMassBody.item"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="57dp"

            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:background="#FF5722"
            android:hint="@string/plaseholderinpuit4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:theme="@style/Theme.HowIsMassBody.OPTION">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:theme="@style/Theme.HowIsMassBody.item"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_second"
        android:layout_width="240dp"
        android:layout_height="66dp"
        android:layout_marginBottom="80dp"
        android:text="@string/Buttontext"
        android:textColor="#FFEDED"
        android:theme="@style/Theme.HowIsMassBody.Boton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>